Learned function returning function

--- a/10-A-Closer-Look-At-Function/index.html
+++ b/10-A-Closer-Look-At-Function/index.html
@@ -47,7 +47,11 @@
 	<button class="buy">Buy new plane 🛩</button>
 	<button class="poll">Answer poll ⁉️</button>
 	<!-- functions-appecting-callback-functions.js -->
-	<script src="functions-appecting-callback-functions.js"></script>
+	<!-- <script src="functions-appecting-callback-functions.js"></script> -->
+
+
+	<!-- functions-returning-functions -->
+	<script src="functions-returning-functions.js"></script>
 </body>
 
 </html>
