Learned bind method.

--- a/10-A-Closer-Look-At-Function/index.html
+++ b/10-A-Closer-Look-At-Function/index.html
@@ -51,7 +51,11 @@
 
 
 	<!-- functions-returning-functions -->
-	<script src="functions-returning-functions.js"></script>
+	<!-- <script src="functions-returning-functions.js"></script> -->
+
+
+	<!-- Using bind methods -->
+	<script src="the-bind-methods.js"></script>
 </body>
 
 </html>
