Completed Coding challenge #1

--- a/10-A-Closer-Look-At-Function/index.html
+++ b/10-A-Closer-Look-At-Function/index.html
@@ -55,7 +55,11 @@
 
 
 	<!-- Using bind methods -->
-	<script src="the-bind-methods.js"></script>
+	<!-- <script src="the-bind-methods.js"></script> -->
+
+
+	<!-- Coding challenge #1 -->
+	<script src="coding-challenge-1.js"></script>
 </body>
 
 </html>
