Learned forEach method in array.

--- a/11-working-with-arrays/index.html
+++ b/11-working-with-arrays/index.html
@@ -111,7 +111,11 @@
 
 	<!-- <script src="script.js"></script> -->
 	<!-- simple array methods.js -->
-	<script src="simple-array-methods.js"></script>
+	<!-- <script src="simple-array-methods.js"></script> -->
+
+	<!-- forEach.js  -->
+	<script src="foreach-method.js"></script>
+
 </body>
 
 </html>
