Learned forEach method on Map,Set.

--- a/11-working-with-arrays/index.html
+++ b/11-working-with-arrays/index.html
@@ -114,7 +114,11 @@
 	<!-- <script src="simple-array-methods.js"></script> -->
 
 	<!-- forEach.js  -->
-	<script src="foreach-method.js"></script>
+	<!-- <script src="foreach-method.js"></script> -->
+
+
+	<!-- forEach on map,set -->
+	<script src="foreach-on-map-and-set.js"></script>
 
 </body>
 
