--- a/13-Advanced-DOM-Bankist/index.html
+++ b/13-Advanced-DOM-Bankist/index.html
@@ -15,7 +15,8 @@
 <body>
 	<header class="header">
 		<nav class="nav">
-			<img src="img/logo.png" alt="Bankist logo" class="nav__logo" id="logo" />
+			<img src="img/logo.png" alt="Bankist logo" class="nav__logo" id="logo" designer="Jonas"
+				data-version-number="3.0" />
 			<ul class="nav__links">
 				<li class="nav__item">
 					<a class="nav__link" href="#section--1">Features</a>
@@ -316,7 +317,11 @@
 
 	<!-- <script src="script.js"></script> -->
 	<!-- Selecting,creating,deleting elements -->
-	<script src="selecting-creating-deleting-elements.js"></script>
+	<!-- <script src="selecting-creating-deleting-elements.js"></script> -->
+
+
+	<!-- Style,Attributes,Classes -->
+	<script src="styles-attributes-classes.js"></script>
 </body>
 
 </html>
