Implemented smooth scrolling effect.

--- a/13-Advanced-DOM-Bankist/index.html
+++ b/13-Advanced-DOM-Bankist/index.html
@@ -315,13 +315,16 @@
 	</div>
 	<div class="overlay hidden"></div>
 
-	<!-- <script src="script.js"></script> -->
 	<!-- Selecting,creating,deleting elements -->
 	<!-- <script src="selecting-creating-deleting-elements.js"></script> -->
 
 
 	<!-- Style,Attributes,Classes -->
-	<script src="styles-attributes-classes.js"></script>
+	<!-- <script src="styles-attributes-classes.js"></script> -->
+
+
+	<script src="script.js"></script>
+
 </body>
 
 </html>
