Learned DOM traversing.

--- a/13-Advanced-DOM-Bankist/index.html
+++ b/13-Advanced-DOM-Bankist/index.html
@@ -323,7 +323,9 @@
 	<!-- <script src="styles-attributes-classes.js"></script> -->
 
 
-	<script src="script.js"></script>
+	<!-- DOM Traversing -->
+	<script src="DOM-traversing.js"></script>
+	<!-- <script src="script.js"></script> -->
 
 </body>
 
