--- a/13-Advanced-DOM-Bankist/index.html
+++ b/13-Advanced-DOM-Bankist/index.html
@@ -324,8 +324,8 @@
 
 
 	<!-- DOM Traversing -->
-	<script src="DOM-traversing.js"></script>
-	<!-- <script src="script.js"></script> -->
+	<!-- <script src="DOM-traversing.js"></script> -->
+	<script src="script.js"></script>
 
 </body>
 
